added the header section

--- a/index.html
+++ b/index.html
@@ -4,12 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Assignment-02</title>
     <link rel="stylesheet" href="Style/styles.css">
 </head>
 
 <body>
-    sdssc
+    <header>
+        <!-- navbar starts here -->
+        <nav class="navbar-main">
+            <h3 class="nav-title">Fitness</h3>
+            <ul class="nav-items">
+                <li class="item home">Home</li>
+                <li class="item">Service </li>
+                <li class="item">Contact</li>
+                <li class="item">About</li>
+            </ul>
+        </nav>
+        <div class="banner-section">
+            <div class="banner-content">
+                <h1 class="banner-title">Get body in<br><span class="shape">shape</span> & stay<br>healthy</h1>
+                <p class="banner-description"> A huge selection of health and fitness content, healthy recipes and
+                    transformation stories to help you get fit and stay fit!</p>
+                <div class="b">
+                    <button class="btn-primary">Join Club Now!</button>
+                    <button class="btn-download">Download App</button>
+                </div>
+            </div>
+            <div class="banner-img">
+                <img src="images/Images 2.png" alt="A young man is standing with a dumbbell in his hand">
+            </div>
+        </div>
+
+
+
+
+        <!-- navbar ends here -->
+    </header>
 </body>
 
 </html>
