--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-02</title>
     <link rel="stylesheet" href="Style/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -19,20 +22,19 @@
                 <li class="item">Contact</li>
                 <li class="item">About</li>
             </ul>
+            <div class="hamburger-icon">
+                <i class="fa-solid fa-bars"></i>
+            </div>
         </nav>
-        <div class="banner-section">
+        <div class="banner-container">
             <div class="banner-content">
                 <h1 class="banner-title">Get body in<br><span class="shape">shape</span> & stay<br>healthy</h1>
                 <p class="banner-description"> A huge selection of health and fitness content, healthy recipes and
                     transformation stories to help you get fit and stay fit!</p>
-                <div class="b">
-                    <button class="btn-primary">Join Club Now!</button>
-                    <button class="btn-download">Download App</button>
-                </div>
+                <button class="btn-primary">Join Club Now!</button>
+                <button class="btn-download">Download App</button>
             </div>
-            <div class="banner-img">
-                <img src="images/Images 2.png" alt="A young man is standing with a dumbbell in his hand">
-            </div>
+            <img class="banner-img" src="images/Images 2.png" alt="A young man is standing with a dumbbell in his hand">
         </div>
 
 
