added the main section

--- a/index.html
+++ b/index.html
@@ -38,6 +38,48 @@
         </div>
         <!-- navbar ends here -->
     </header>
+    <main>
+        <section class="change-your-habits-container">
+            <div class="change-your-habits-content">
+                <h3 class="section-title">Change Your Habits</h3>
+                <p class="section-description">We believe fitness should be accessible to everyone, everywhere,
+                    regardless of income or <br> access to a gym.</p>
+            </div>
+            <div class="change-your-habits-2nd-container">
+                <div class="box">
+                    <img class="section-img" src="images/image 3.png" alt="">
+                    <h5 class="title">Movement</h5>
+                    <p class="description">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="box">
+                    <img class="section-img" src="images/image 2.png" alt="">
+                    <h5 class="title">Time</h5>
+                    <p class="description">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="box">
+                    <img class="section-img" src="images/image 4.png" alt="">
+                    <h5 class="title"> Practice</h5>
+                    <p class="description">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="box">
+                    <img class="section-img" src="images/image 5.png" alt="">
+                    <h5 class=" title">Weight Loss</h5>
+                    <p class="description">We believe fitness should be accessible to everyone</p>
+                </div>
+            </div>
+        </section>
+        <section class="run-an-extra-container">
+            <div class="run-an-extra-content">
+                <h3 class="section-title run-section-title">Run an Extra<br>Mile Easily</h3>
+                <p class="section-description"> We believe fitness should be accessible to everyone,<br> everywhere,
+                    regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
+                <button class="btn-primary btn-join">Join Now</button>
+            </div>
+            <div>
+                <img class="run-img" src="images/run.jpg" alt="">
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
